Modify Site.css to fix navbar overlapping the rendered body content
The navbar is hiding the top 50px of the rendered body content on each page. To fix, added 80px padding-top to the body, and removed the

--- a/BandZone/BandZone.UI/Content/Site.css
+++ b/BandZone/BandZone.UI/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 0;
+    padding-top: 80px; /* Default was 50px. Added addl 30px to give content room to breathe */
     padding-bottom: 20px;
 }
 
@@ -35,7 +35,7 @@ textarea {
 
 
 .carousel-item {
-    padding-top: 80px;
+    /*padding-top: 80px; */ /* Removed this padding and replaced it with body padding so that all pages will benefit */ 
     max-height: 650px;
 }
 
